RESOLVED FIXED50597
WebProcess crash in NPRemoteObjectMap::invalidate when closing tab
https://bugs.webkit.org/show_bug.cgi?id=50597
Summary WebProcess crash in NPRemoteObjectMap::invalidate when closing tab
Anders Carlsson
Reported 2010-12-06 16:39:22 PST
WebProcess crash in NPRemoteObjectMap::invalidate when closing tab
Attachments
Patch (5.85 KB, patch)
2010-12-06 16:44 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2010-12-06 16:44:18 PST
Anders Carlsson
Comment 2 2010-12-06 16:44:36 PST
Anders Carlsson
Comment 3 2010-12-06 16:58:27 PST
Note You need to log in before you can comment on or make changes to this bug.